mobile slider left shift problem solve

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -106,7 +106,7 @@
   .linkouter {
     position: absolute;
     top: -2rem;
-    left: 1rem;
+    left: 0rem;
     width: 100vw;
     z-index: -1;
     height: 105vh;
@@ -126,7 +126,7 @@
     display: flex;
     flex-direction: column;
     top: -2rem;
-    left: 1rem;
+    left: 0rem;
     min-width: 15rem;
     height: 105vh;
     list-style: none;
